# pepel

./: .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix
completions/: _pepel  _pepel.ps1  pepel.bash  pepel.fish
components/config/examples/: generate_sublime.rs
components/config/src/: highlighting.rs  lib.rs
components/config/src/config/: markup.rs  mod.rs
components/errors/: Cargo.toml
components/errors/src/: lib.rs
components/front_matter/: Cargo.toml
components/front_matter/src/: lib.rs  section.rs
components/plugins/: Cargo.toml
components/plugins/src/: lib.rs  lua_event.rs  lua_event_module.rs  lua_simple_enum.rs  lua_tag.rs  lua_tag_module.rs  macros.rs
components/rendering/: Cargo.toml
components/rendering/src/: context.rs  markdown.rs
components/rendering/tests/: markdown.rs
components/site/: Cargo.toml
components/site/benches/: gen.py
components/site/src/: lib.rs  link_checking.rs  sass.rs  tpls.rs
components/templates/src/: lib.rs
components/templates/src/builtins/: anchor-link.html  atom.xml
components/utils/src/: default_tpl.html  lib.rs  templates.rs
src/: cli.rs
src/cmd/: init.rs  serve.rs
test_site/templates/: robots.txt
