[package]
name = "pepel"
version = "0.13.0"
authors = ["Vincent Prouillet <hello@vincentprouillet.com>", "Maximilian Siling <root@goldstein.rs>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A fast static site generator with everything built-in and also plugins"
repository = "https://github.com/GoldsteinE/pepel"
keywords = ["static", "site", "generator", "blog"]

include = ["src/**/*", "LICENSE", "README.md"]

[build-dependencies]
clap = "2"

[[bin]]
name = "pepel"

[dependencies]
atty = "0.2.11"
clap = { version = "2", default-features = false }
chrono = "0.4"
lazy_static = "1.1"
termcolor = "1.0.4"
# Used in init to ensure the url given as base_url is a valid one
url = "2"
# Below is for the serve cmd
hyper = { version = "0.14.1", default-features = false, features = ["runtime", "server", "http2", "http1"] }
tokio = { version = "1.0.1", default-features = false, features = ["rt", "fs"] }
percent-encoding = "2"
notify = "4"
ws = "0.9"
ctrlc = "3"
open = "1.2"
globset = "0.4"
relative-path = "1"
serde_json = "1.0"

site = { path = "components/site" }
errors = { path = "components/errors" }
front_matter = { path = "components/front_matter" }
utils = { path = "components/utils" }
config = { path = "components/config/" }
tempfile = "3.2.0"

[workspace]
members = [
    "components/config",
    "components/errors",
    "components/front_matter",
    "components/rendering",
    "components/site",
    "components/templates",
    "components/utils",
    "components/search",
    "components/imageproc",
    "components/link_checker",
    "components/library",
	"components/plugins",
]

[profile.release]
lto = true
codegen-units = 1
